dodanie komunikacji z api

--- a/fiszki-client/src/app/pages/home/home.component.html
+++ b/fiszki-client/src/app/pages/home/home.component.html
@@ -8,7 +8,7 @@
             <img class="flag-3" src="../../../assets/images/uk.png">
         </div>
         <div class="form-box">
-            <form #form="ngForm" (ngSubmit)="Login()">
+            <form #form="ngForm" (ngSubmit)="Submit()">
                 <div>
                     <label>E-mail</label>
                     <input
