--- a/fiszki-client/src/assets/scss/shared-styles.scss
+++ b/fiszki-client/src/assets/scss/shared-styles.scss
@@ -1,3 +1,5 @@
+@use './base';
+
 @mixin background-gradient
 {
     background: #00a6fb;
@@ -18,4 +20,133 @@
 {
     cursor: default;
     color: gainsboro;
+}
+
+@mixin logo
+{
+    width: 90%;
+    height: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    a
+    {
+        font-size: 15px;
+        color: white;
+        text-decoration: none;
+        font-family: base.$main-font;
+        margin-top: 10px;
+    }
+
+    h3
+    {
+        font-family: 'Pacifico', cursive;
+        color: #00446b;
+        font-size: 50px;
+        text-transform: uppercase;
+        letter-spacing: 5px;
+    }
+
+    p
+    {
+        font-family: base.$main-font;
+    }
+
+    .p-header
+    {
+        font-size: 20px;
+        color: #00446b;
+    }
+}
+
+@mixin flags
+{
+    position: relative;
+    margin-top: 20px;
+
+    img
+    {
+        width: 70px;
+        margin: 10px;
+    }
+
+    .flag-1
+    {
+        position: absolute;
+        top: -10px;
+        left: -100px;
+    }
+
+    .flag-3
+    {
+        position: absolute;
+        top: -10px;
+        right: -100px;
+    }
+
+    .flag-2
+    {
+        width: 80px;
+    }
+}
+
+@mixin forms
+{
+    width: 300px;
+    display: flex;
+    justify-content: center;
+    font-family: base.$main-font;
+
+    form
+    {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    div
+    {
+        display: flex;
+        flex-direction: column;
+        width: 80%;
+        padding: 5px;
+    }
+
+    input
+    {
+        border: 2px solid #005485;
+        padding: 10px;
+        border-radius: 10px;
+    }
+
+    input:focus
+    {
+        outline: none !important;
+        padding: 10px;
+        border-radius: 10px;
+        background-color: #b7e1fa;
+    }
+
+    button
+    {
+        margin-top: 10px;
+        @include button;
+    }
+
+    .unactive
+    {
+        @include unactive-button;
+    }
+
+    label
+    {
+        margin-left: 10px;
+        color: #00446b;
+    }
 }
