--- a/fiszki-client/src/app/pages/home/home.component.html
+++ b/fiszki-client/src/app/pages/home/home.component.html
@@ -2,13 +2,7 @@
 <app-loader *ngIf="isLoading"/>
 <div class="wrapper">
     <div class="box">
-        <h3>Fiszki</h3>
-        <p class="p-header">skuteczna nauka słówek</p>
-        <div class="flags">
-            <img class="flag-1" src="../../../assets/images/sweden.png">
-            <img class="flag-2" src="../../../assets/images/poland.png">
-            <img class="flag-3" src="../../../assets/images/uk.png">
-        </div>
+        <app-logo/>
         <div class="form-box">
             <form #form="ngForm" (ngSubmit)="Submit()">
                 <div>
