--- a/fiszki-client/src/assets/scss/_base.scss
+++ b/fiszki-client/src/assets/scss/_base.scss
@@ -1,2 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Pacifico&display=swap');
+
 $primary-color: #00a6fb;
 $main-font: 'Montserrat', sans-serif;
