--- a/fiszki-client/src/app/pages/user/core/navbar/navbar.component.html
+++ b/fiszki-client/src/app/pages/user/core/navbar/navbar.component.html
@@ -1,8 +1,3 @@
 <div class="wrapper">
-    <div class="container">
-        <div class="logo">Fiszki</div>
-        <div class="profile">
-            <img src="../../../../../assets/images/profile.jpg" alt="">
-        </div>
-    </div>
+    <app-logo/>
 </div>
