--- a/fiszki-client/src/app/pages/user/core/navbar/navbar.component.scss
+++ b/fiszki-client/src/app/pages/user/core/navbar/navbar.component.scss
@@ -1,42 +1,12 @@
 @use '../../../../../assets/scss/base';
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Pacifico&display=swap');
+@use '../../../../../assets/scss/shared-styles.scss';
 
 .wrapper
 {
     width: 100%;
-    height: 60px;
-    background-color: #0066a1;
-}
-
-.container
-{
-    width: 90%;
-    height: 100%;
-    margin-left: auto;
-    margin-right: auto;
+    height: 250px;
+    @include shared-styles.background-gradient;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-}
-
-.logo
-{
-    font-family: base.$main-font;
-    font-size: 20px;
-    font-family: 'Pacifico';
-    letter-spacing: 2px;
-}
-
-.profile
-{
-    height: 40px;
-    width: 40px;
-    overflow: hidden;
-    border-radius: 50px;
-    cursor: pointer;
-
-    img
-    {
-        width: 100%
-    }
 }
