--- a/fiszki-client/src/app/pages/user/pages/user-home/user-home.component.html
+++ b/fiszki-client/src/app/pages/user/pages/user-home/user-home.component.html
@@ -1,5 +1,10 @@
+<app-loader *ngIf="isLoading"/>
 <div class="wrapper">
     <div class="box">
-        <h2 (click)="LogOut()">Wyloguj sie</h2>
+        <h4 *ngIf="currentUser">Witaj {{currentUser.firstName}}!</h4>
+        <div><a>Nauka</a></div>
+        <div><a [routerLink]="['profile']">Dodaj Fiszki</a></div>
+        <div><a [routerLink]="['profile']">Twój profil</a></div>
+        <h4 (click)="LogOut()">Wyloguj sie</h4>
     </div>
 </div>
