--- a/fiszki-client/src/app/pages/user/pages/user-home/user-home.component.scss
+++ b/fiszki-client/src/app/pages/user/pages/user-home/user-home.component.scss
@@ -1,17 +1,62 @@
 @use '../../../../../assets/scss/shared-styles.scss';
+@use '../../../../../assets/scss/base';
 
 .wrapper
 {
     width: 100%;
+    height: calc(100vh - 250px);
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    font-family: base.$main-font;
 }
 
 .box
 {
-    h2{
+
+    text-transform: uppercase;
+    color: #00446b;
+
+    h4
+    {
         cursor: pointer;
+        margin: 10px;
+        text-align: center;
+    }
+
+    div
+    {
+        margin: 15px;
+        height: 50px;
+        width: 250px;
+        border-radius: 10px;
+        font-weight: 600;
+        background: #0066a1;
+        background: linear-gradient(90deg, #0066a1 25%, #00a6fb 100%);
+        cursor: pointer;
+        box-shadow: 0px 4px 10px -7px rgba(66, 68, 90, 1);
+        transition: all ease-in-out 0.2s;
+    }
+
+    div:hover
+    {
+        opacity: 0.9;
+    }
+
+    h4:hover
+    {
+        opacity: 0.9;
+    }
+
+    a
+    {
+        text-decoration: none;
+        color: #00446b;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 }
