--- a/fiszki-client/src/app/pages/user/pages/user-profile/user-profile.component.html
+++ b/fiszki-client/src/app/pages/user/pages/user-profile/user-profile.component.html
@@ -1,1 +1,12 @@
-<p>user-profile works!</p>
+<app-loader *ngIf="isLoading"/>
+<div class="wrapper">
+    <div class="box">
+        <h4 *ngIf="levelInfo">aktualny level: {{levelInfo.level}}</h4>
+        <h4>Następny level:</h4>
+        <div class="border">
+            <div *ngIf="levelInfo" [lvlStatus]="levelInfo.points" [pointsRequired]="levelInfo.nextLevelPoints"></div>
+            <p *ngIf="levelInfo">{{levelInfo.points}}/{{levelInfo.nextLevelPoints}}</p>
+        </div>
+        <div class="item">Twoje Fiszki</div>
+    </div>
+</div>
