--- a/fiszki-client/src/assets/scss/shared-styles.scss
+++ b/fiszki-client/src/assets/scss/shared-styles.scss
@@ -151,3 +151,71 @@
         color: #00446b;
     }
 }
+
+@mixin user-wrapper
+{
+    width: 100%;
+    height: calc(100vh - 250px);
+    min-height: 400px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-family: base.$main-font;
+    letter-spacing: 2px;
+}
+
+@mixin user-box 
+{
+    text-transform: uppercase;
+    color: #00446b;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    h4
+    {
+        cursor: pointer;
+        margin: 10px;
+        text-align: center;
+    }
+
+    .item
+    {
+        margin: 15px;
+        height: 50px;
+        width: 250px;
+        border-radius: 10px;
+        font-weight: 600;
+        background: #0066a1;
+        background: linear-gradient(90deg, #0066a1 25%, #00a6fb 100%);
+        cursor: pointer;
+        box-shadow: 0px 4px 10px -7px rgba(66, 68, 90, 1);
+        transition: all ease-in-out 0.2s;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .item:hover
+    {
+        opacity: 0.9;
+    }
+
+    h4:hover
+    {
+        opacity: 0.9;
+    }
+
+    a
+    {
+        text-decoration: none;
+        color: #00446b;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+}
