dodanie strony z profilem uzytkownika

--- a/fiszki-client/src/app/pages/user/pages/user-profile-router/pages/user-profile/user-profile.component.scss
+++ b/fiszki-client/src/app/pages/user/pages/user-profile-router/pages/user-profile/user-profile.component.scss
@@ -1,5 +1,5 @@
-@use '../../../../../assets/scss/base';
-@use '../../../../../assets/scss/shared-styles.scss';
+@use '../../../../../../../assets/scss/base';
+@use '../../../../../../../assets/scss/shared-styles.scss';
 
 .wrapper
 {
