pobieranie kolekcji z serwera

--- a/fiszki-client/src/assets/scss/_base.scss
+++ b/fiszki-client/src/assets/scss/_base.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Pacifico&display=swap');
 
 $primary-color: #00a6fb;
+$secondary-color: #00446b;
 $main-font: 'Montserrat', sans-serif;
