--- a/fiszki-client/src/app/pages/user/pages/user-profile-router/pages/user-collections/user-collections.component.scss
+++ b/fiszki-client/src/app/pages/user/pages/user-profile-router/pages/user-collections/user-collections.component.scss
@@ -22,9 +22,54 @@
 {
     width: 80%;
     height: 250px;
-    background-color: base.$primary-color;
     display: flex;
     justify-content: flex-start;
+    position: relative;
+}
+
+.controls
+{
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+   z-index: 0; 
+}
+
+.arrow
+{
+    width: 50px;
+    height: 50px;
+    background-color: base.$primary-color;
+    border-radius: 50%;
+    transition: all ease-in-out 0.2s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 25px;
+    cursor: pointer;
+}
+
+.left
+{
+    transform: translateX(-55px);
+}
+
+.left:hover
+{
+    transform: translateX(-60px);
+}
+
+.right
+{
+    transform: translateX(55px);
+}
+
+.right:hover
+{
+    transform: translateX(60px);
 }
 
 .carousel
@@ -32,6 +77,7 @@
     height: 100%;
     width: 2000px;
     display: flex;
+    z-index: 1;
 
     div
     {
