--- a/fiszki-client/src/app/pages/user/pages/user-profile-router/pages/user-collections/user-collections.component.scss
+++ b/fiszki-client/src/app/pages/user/pages/user-profile-router/pages/user-collections/user-collections.component.scss
@@ -18,13 +18,23 @@
     }
 }
 
+.carousel-wrapper
+{
+    width: 90%;
+    position: relative;
+    display: flex;
+}
+
 .carousel-box
 {
-    width: 80%;
+    width: 90%;
     height: 250px;
     display: flex;
     justify-content: flex-start;
     position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    overflow: hidden;
 }
 
 .controls
@@ -35,7 +45,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-   z-index: 0; 
+    z-index: 1; 
 }
 
 .arrow
@@ -54,30 +64,33 @@
 
 .left
 {
-    transform: translateX(-55px);
+    left: 0;
 }
 
 .left:hover
 {
-    transform: translateX(-60px);
+    transform: translateX(-5px);
 }
 
 .right
 {
-    transform: translateX(55px);
+    right: 0;
 }
 
 .right:hover
 {
-    transform: translateX(60px);
+    transform: translateX(5px);
 }
 
 .carousel
 {
     height: 100%;
-    width: 2000px;
+    width: 1600px;
     display: flex;
-    z-index: 1;
+    align-items: center;
+    justify-content: space-around;
+
+    position: absolute;
 
     div
     {
