--- a/fiszki-client/src/assets/scss/_base.scss
+++ b/fiszki-client/src/assets/scss/_base.scss
@@ -3,3 +3,11 @@
 $primary-color: #00a6fb;
 $secondary-color: #00446b;
 $main-font: 'Montserrat', sans-serif;
+
+//screen-width breakpoints
+
+$x-small: 576px;
+$small: 768px;
+$medium: 992px;
+$large: 1200px;
+$extralarge: 1400px; 
