--- a/fiszki-client/src/app/pages/user/pages/user-profile-router/pages/user-collections/components/collection/collection.component.scss
+++ b/fiszki-client/src/app/pages/user/pages/user-profile-router/pages/user-collections/components/collection/collection.component.scss
@@ -9,3 +9,11 @@
     background-color: base.$primary-color;
     box-shadow: 0px 3px 13px -7px rgba(66, 68, 90, 1);
 }
+
+@media(max-width : base.$small)
+{
+    .flashcard
+    {
+        margin-left: 10px;
+    }
+}
