--- a/fiszki-client/src/app/pages/user/pages/user-profile-router/pages/user-collections/user-collections.component.html
+++ b/fiszki-client/src/app/pages/user/pages/user-profile-router/pages/user-collections/user-collections.component.html
@@ -2,15 +2,17 @@
     <h3>Twoje Zestawy</h3>
     <div class="carousel-wrapper">
         <div class="controls">
-            <div class="arrow left" (click)="DecrementPage()">
+            <div class="arrow left" (click)="DecrementPage()" [ngClass]="{'unactive': currentPage <= 0}">
                 <fa-icon [icon]="faArrowLeft"></fa-icon>
             </div>
-            <div class="arrow right" (click)="IncrementPage()">
+            <div class="arrow right" (click)="IncrementPage()" [ngClass]="{'unactive': currentPage >= pagesQuantity}">
                 <fa-icon [icon]="faArrowRight"></fa-icon>
             </div>
         </div>
         <div class="carousel-box">
-            <div class="carousel">
+            <div class="carousel" carousel>
+                <app-collection/>
+                <app-collection/>
                 <app-collection/>
                 <app-collection/>
                 <app-collection/>
@@ -20,5 +22,4 @@
             </div>
         </div>
     </div>
-    <div>{{currentPage}}</div>
 </div>
