--- a/fiszki-client/src/app/pages/user/pages/user-profile-router/pages/user-collections/components/collection/collection.component.html
+++ b/fiszki-client/src/app/pages/user/pages/user-profile-router/pages/user-collections/components/collection/collection.component.html
@@ -1,4 +1,9 @@
 <div class="flashcard">
     <h4>{{collectionName}}</h4>
-    <p>{{flashcardsQuantity}}</p>
+    <p>Ilość fiszek: {{flashcardsQuantity}}</p>
+    <div class="icons">
+        <div><fa-icon [icon]="faPlusCircle"></fa-icon></div>
+        <div><fa-icon [icon]="faTrash"></fa-icon></div>
+        <div><fa-icon [icon]="faEdit"></fa-icon></div>
+    </div>
 </div>
