--- a/fiszki-client/src/app/pages/user/pages/user-profile-router/pages/user-collections/components/collection/collection.component.scss
+++ b/fiszki-client/src/app/pages/user/pages/user-profile-router/pages/user-collections/components/collection/collection.component.scss
@@ -8,7 +8,32 @@
     border-radius: 10px;
     background-color: base.$primary-color;
     box-shadow: 0px 3px 13px -7px rgba(66, 68, 90, 1);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    padding: 15px 0;
 }
+
+.icons
+{
+    font-size: 22px;
+    display: flex;
+
+    div
+    {
+        padding: 5px;
+        transition: all ease-in-out 0.2s;
+        cursor: pointer;
+    }
+
+    
+    div:hover
+    {
+        color: black;
+    }
+}
+
 
 @media(max-width : base.$small)
 {
