--- a/fiszki-client/src/app/pages/user/pages/user-home/user-home.component.html
+++ b/fiszki-client/src/app/pages/user/pages/user-home/user-home.component.html
@@ -2,8 +2,8 @@
 <div class="wrapper">
     <div class="box">
         <h4 *ngIf="currentUser">Witaj {{currentUser.firstName}}!</h4>
-        <div class="item"><a>Nauka</a></div>
-        <div class="item"><a [routerLink]="['profile']">Dodaj Fiszki</a></div>
+        <div class="item" [routerLink]="['learning']"><a>Nauka</a></div>
+        <div class="item"><a [routerLink]="['profile/collections']">Twoje Fiszki</a></div>
         <div class="item"><a [routerLink]="['profile']">Twój profil</a></div>
         <h4 (click)="LogOut()">Wyloguj sie</h4>
     </div>
