dodanie trybu do nauki

--- a/fiszki-client/src/app/pages/user/pages/learning-page/pages/categories-page/categories-page.component.html
+++ b/fiszki-client/src/app/pages/user/pages/learning-page/pages/categories-page/categories-page.component.html
@@ -1,3 +1,5 @@
+<ng-template appPlaceholder></ng-template>
+<app-loader *ngIf="isLoading"></app-loader>
 <div class="wrapper">
     <div class="limit">
         <h4>Ustaw limit fiszek</h4>
