--- a/fiszki-client/src/app/pages/user/pages/user-profile-router/pages/user-collections/components/add-collection/add-collection.component.html
+++ b/fiszki-client/src/app/pages/user/pages/user-profile-router/pages/user-collections/components/add-collection/add-collection.component.html
@@ -2,9 +2,17 @@
     <div class="box">
         <div class="icon" (click)="CloseForm()"><fa-icon [icon]="faRemove"/></div>
         <h2>Dodaj zestaw</h2>
-        <h5>Nazwa zestawu</h5>
-        <input type="text">
-        <button type="submit" (click)="OnAdd('zestaw-2')">Dodaj</button>
+        <form #form="ngForm" (ngSubmit)="OnAdd(collectionName)">
+            <h5>Nazwa zestawu</h5>
+            <input 
+                type="text"
+                placeholder="nazwa"
+                name="name"
+                required
+                [(ngModel)]="collectionName"
+            >
+            <button type="submit" [ngClass]="form.valid === true ? 'active' : 'unactive'">Dodaj</button>
+        </form>
     </div>
 </div>
 <app-loader *ngIf='isLoading'/>
