--- a/fiszki-client/src/app/pages/user/pages/user-profile-router/pages/user-collections/components/add-collection/add-collection.component.scss
+++ b/fiszki-client/src/app/pages/user/pages/user-profile-router/pages/user-collections/components/add-collection/add-collection.component.scss
@@ -48,19 +48,36 @@
         border: 3px solid base.$primary-color;
         padding: 10px;
         margin-top: 5px;
-        margin-bottom: 20px;
+        margin-bottom: 5px;
         background-color: #f5f5f5;
     }
 
     button
     {
         @include shared-styles.button;
-        background-color: base.$primary-color;
-        position: absolute;
-        bottom: 50px;
+        margin-top: 10px;
+    }   
 
+    form
+    {
+        margin-top: 20px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
     }
 
+}
+
+.active
+{
+    background-color: base.$primary-color;
+}
+
+.unactive
+{
+    @include shared-styles.unactive-button;
+    cursor: default;
 }
 
 .icon
