--- a/fiszki-client/src/app/pages/user/pages/user-profile-router/pages/user-collections/components/add-collection/add-collection.component.html
+++ b/fiszki-client/src/app/pages/user/pages/user-profile-router/pages/user-collections/components/add-collection/add-collection.component.html
@@ -1,3 +1,4 @@
+<ng-template appPlaceholder></ng-template>
 <div class="wrapper">
     <div class="box">
         <div class="icon" (click)="CloseForm()"><fa-icon [icon]="faRemove"/></div>
