--- a/fiszki-client/src/app/pages/user/pages/user-profile-router/pages/user-collections/components/collection/collection.component.html
+++ b/fiszki-client/src/app/pages/user/pages/user-profile-router/pages/user-collections/components/collection/collection.component.html
@@ -1,9 +1,13 @@
+<div class="alert">
+    <ng-template appPlaceholder></ng-template>
+</div>
 <div class="flashcard">
     <h4>{{collectionName}}</h4>
     <p>Ilość fiszek: {{flashcardsQuantity}}</p>
     <div class="icons">
         <div><fa-icon [icon]="faPlusCircle"></fa-icon></div>
-        <div><fa-icon [icon]="faTrash"></fa-icon></div>
+        <div (click)="OnDelete()"><fa-icon [icon]="faTrash"></fa-icon></div>
         <div><fa-icon [icon]="faEdit"></fa-icon></div>
     </div>
 </div>
+
