dodanie strony do edtytowania zestawu

--- a/fiszki-client/src/app/pages/user/pages/user-profile-router/pages/user-collections/components/collection/collection.component.html
+++ b/fiszki-client/src/app/pages/user/pages/user-profile-router/pages/user-collections/components/collection/collection.component.html
@@ -5,9 +5,8 @@
     <h4>{{collectionName}}</h4>
     <p>Ilość fiszek: {{flashcardsQuantity}}</p>
     <div class="icons">
-        <div><fa-icon [icon]="faPlusCircle"></fa-icon></div>
+        <div (click)="OnEdit()"><fa-icon [icon]="faEdit"></fa-icon></div>
         <div (click)="OnDelete()"><fa-icon [icon]="faTrash"></fa-icon></div>
-        <div><fa-icon [icon]="faEdit"></fa-icon></div>
     </div>
 </div>
 
