--- a/fiszki-client/src/app/pages/user/pages/user-profile-router/pages/user-collection-edit/user-collection-edit.component.html
+++ b/fiszki-client/src/app/pages/user/pages/user-profile-router/pages/user-collection-edit/user-collection-edit.component.html
@@ -1,1 +1,17 @@
-<div>xd</div>
+<div class="wrapper">
+    <div class="container">
+        <div class="button" (click)="OpenForm()">Dodaj fiszkę</div>
+        <div class="box">
+            <h3 *ngIf="collection.length === 0">Brak fiszek</h3>
+            <div *ngIf="collection.length > 0">
+                <app-flashcard *ngFor="let flashcard of collection; index as i"
+                    [flashcard]="flashcard"
+                />
+            </div>
+        </div>
+    </div>
+</div>
+<app-flashcard-edit-form 
+    *ngIf="isFormOpen"
+    (closeFormEvent)="isFormOpen=false"
+/>
