--- a/fiszki-client/src/assets/scss/shared-styles.scss
+++ b/fiszki-client/src/assets/scss/shared-styles.scss
@@ -15,6 +15,8 @@
     border-radius: 10px;
     cursor: pointer;
     text-transform: uppercase;
+    font-family: base.$main-font;
+    letter-spacing: 2px;
 }
 
 @mixin unactive-button
