--- a/fiszki-client/src/app/pages/user/pages/user-profile-router/pages/user-collection-edit/user-collection-edit.component.html
+++ b/fiszki-client/src/app/pages/user/pages/user-profile-router/pages/user-collection-edit/user-collection-edit.component.html
@@ -1,8 +1,9 @@
+<app-loader *ngIf="isLoading"/>
 <div class="wrapper">
     <div class="container">
         <div class="button" (click)="OpenForm()">Dodaj fiszkę</div>
         <div class="box">
-            <h3 *ngIf="collection.length === 0">Brak fiszek</h3>
+            <h3 *ngIf="collection.length === 0 && !isLoading">Brak fiszek</h3>
             <div *ngIf="collection.length > 0">
                 <app-flashcard *ngFor="let flashcard of collection; index as i"
                     [flashcard]="flashcard"
@@ -14,4 +15,5 @@
 <app-flashcard-edit-form 
     *ngIf="isFormOpen"
     (closeFormEvent)="isFormOpen=false"
+    [collectionName]="collectionName"
 />
