--- a/fiszki-client/src/app/pages/user/pages/user-profile-router/pages/user-collection-edit/user-collection-edit.component.scss
+++ b/fiszki-client/src/app/pages/user/pages/user-profile-router/pages/user-collection-edit/user-collection-edit.component.scss
@@ -43,4 +43,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
+
+    div
+    {
+        display: flex;
+        flex-direction: center;
+        align-items: center;
+        flex-wrap: wrap;
+    }
 }
