--- a/fiszki-client/src/app/pages/user/pages/user-profile-router/pages/user-collections/components/flashcard/flashcard.component.html
+++ b/fiszki-client/src/app/pages/user/pages/user-profile-router/pages/user-collections/components/flashcard/flashcard.component.html
@@ -9,7 +9,7 @@
             </div>
             <div class="icons">
                 <div><fa-icon [icon]="faEdit"></fa-icon></div>
-                <div><fa-icon [icon]="faTrash"></fa-icon></div>
+                <div *ngIf="flashcard.id" (click)="OnDelete(flashcard.id)"><fa-icon [icon]="faTrash"></fa-icon></div>
             </div>
         </div>
         <div class="back">
@@ -18,10 +18,6 @@
             </div>
             <div class="body">
                 <p>{{flashcard.translatedExample}}</p>
-            </div>
-            <div class="icons">
-                <div><fa-icon [icon]="faEdit"></fa-icon></div>
-                <div><fa-icon [icon]="faTrash"></fa-icon></div>
             </div>
         </div>
     </div>
