--- a/fiszki-client/src/app/pages/user/pages/user-profile-router/pages/user-collection-edit/user-collection-edit.component.html
+++ b/fiszki-client/src/app/pages/user/pages/user-profile-router/pages/user-collection-edit/user-collection-edit.component.html
@@ -17,5 +17,6 @@
 <app-flashcard-edit-form 
     *ngIf="isFormOpen"
     (closeFormEvent)="isFormOpen=false"
+    (flashcardEvent)="OnAdd($event)"
     [collectionName]="collectionName"
 />
