--- a/fiszki-client/src/app/pages/user/pages/learning-page/pages/game-page/components/learning-mode/learning-mode.component.scss
+++ b/fiszki-client/src/app/pages/user/pages/learning-page/pages/game-page/components/learning-mode/learning-mode.component.scss
@@ -20,7 +20,7 @@
     justify-content: center;
     align-items: center;
 
-    h4, h3
+    h4
     {
         text-transform: uppercase;
     }
@@ -35,26 +35,42 @@
 .flashcard
 {
     width: 100%;
-    max-width: 500px;
-    min-width: 300px;
+    max-width: 400px;
+    min-width: 250px;
     height: 250px;
-    display: flex;
     justify-content: center;
     align-items: center;
-    background: #00a6fb;
-    background: linear-gradient(0deg, #0066a1 0%, #00a6fb 70%);
     border-radius: 10px;
     box-shadow: 0px 3px 13px -7px rgba(66, 68, 90, 1);
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     cursor: pointer;
     margin-top: 20px;
     position: relative;
+    overflow: hidden;
 
-    h3
-    {
-        position: absolute;
-        top: 40px;
-    }
+}
+
+.header
+{
+    width: 100%;
+    height: 25%;
+    background-color: base.$primary-color;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-transform: lowercase;
+}
+
+.example
+{
+    width: 100%;
+    height: 75%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding: 10px;
 }
