--- a/fiszki-client/src/app/pages/user/pages/user-profile-router/pages/user-collection-edit/components/flashcard-edit-form/flashcard-edit-form.component.html
+++ b/fiszki-client/src/app/pages/user/pages/user-profile-router/pages/user-collection-edit/components/flashcard-edit-form/flashcard-edit-form.component.html
@@ -2,7 +2,8 @@
 <div class="wrapper">
     <div class="box">
         <div class="cross" (click)="CloseForm()"><fa-icon [icon]="faCross"></fa-icon></div>
-        <h3>Dodaj Fiszkę</h3>
+        <h3 *ngIf="!editMode">Dodaj Fiszkę</h3>
+        <h3 *ngIf="editMode">Edytuj Fiszkę</h3>
         <form #form="ngForm" (ngSubmit)="Submit()">
             <div>
                 <label>
@@ -62,7 +63,7 @@
                     <option *ngFor="let option of options" [value]="option">{{option}}</option>
                 </select>
             </div>
-            <button [ngClass]="form.valid === true ? 'active' : 'unactive'">Dodaj</button>
+            <button [ngClass]="form.valid === true ? 'active' : 'unactive'">Zatwierdź</button>
         </form>
     </div>
 </div>
