--- a/fiszki-client/src/app/pages/user/pages/user-profile-router/pages/user-collections/components/flashcard/flashcard.component.html
+++ b/fiszki-client/src/app/pages/user/pages/user-profile-router/pages/user-collections/components/flashcard/flashcard.component.html
@@ -8,7 +8,7 @@
                 <p>{{flashcard.example}}</p>
             </div>
             <div class="icons">
-                <div><fa-icon [icon]="faEdit"></fa-icon></div>
+                <div  *ngIf="flashcard.id" (click)="OnEdit(flashcard.id)"><fa-icon [icon]="faEdit"></fa-icon></div>
                 <div *ngIf="flashcard.id" (click)="OnDelete(flashcard.id)"><fa-icon [icon]="faTrash"></fa-icon></div>
             </div>
         </div>
