--- a/fiszki-client/src/app/pages/user/pages/learning-page/pages/game-page/components/summary-box/summary-box.component.html
+++ b/fiszki-client/src/app/pages/user/pages/learning-page/pages/game-page/components/summary-box/summary-box.component.html
@@ -1,1 +1,9 @@
-<p>summary-box works!</p>
+<div class="wrapper">
+    <div class="box">
+        <h3>Ukończyłeś zestaw</h3>
+        <div class="buttons">
+            <button (click)="ToMenuNav()">Menu</button>
+            <button (click)="PlayAgain()">Powtórz</button>
+        </div>
+    </div>
+</div>
