dodanie trybu nauki dla wlasnych kolekcji

--- a/fiszki-client/src/app/pages/user/pages/learning-page/pages/learning-page-settings/learning-page-settings.component.html
+++ b/fiszki-client/src/app/pages/user/pages/learning-page/pages/learning-page-settings/learning-page-settings.component.html
@@ -33,6 +33,6 @@
             <img *ngIf="!polishFirst" src="../../../../../../../assets/images/poland.png">
         </div>
         <div class="item" [routerLink]="['categories']">Kategorie</div>
-        <div class="item">Twoje zestawy</div>
+        <div class="item" [routerLink]="['collections']">Twoje zestawy</div>
     </div>
 </div>
