--- a/fiszki-client/src/app/shared/ui/logo/logo.component.html
+++ b/fiszki-client/src/app/shared/ui/logo/logo.component.html
@@ -1,4 +1,4 @@
-<div class="box">
+<div class="box" (click)="Navigate()">
     <h3>Fiszki</h3>
     <p class="p-header">skuteczna nauka słówek</p>
     <div class="flags">
