dodanie trybu quiz

--- a/fiszki-client/src/app/pages/user/pages/learning-page/pages/game-page/game-page.component.html
+++ b/fiszki-client/src/app/pages/user/pages/learning-page/pages/game-page/game-page.component.html
@@ -1,2 +1,2 @@
 <app-learning-mode *ngIf="learningMode"/>
-<div *ngIf="!learningMode">quiz</div>
+<app-quiz-mode *ngIf="!learningMode"></app-quiz-mode>
