--- a/fiszki-client/src/app/pages/user/pages/learning-page/pages/game-page/components/quiz-mode/quiz-mode.component.html
+++ b/fiszki-client/src/app/pages/user/pages/learning-page/pages/game-page/components/quiz-mode/quiz-mode.component.html
@@ -13,5 +13,6 @@
                 </div>
             </div>
         </div>
+        <h3 class="points">Punkty : {{points}}</h3>
     </div>
 </div>
