--- a/fiszki-client/src/app/pages/user/pages/learning-page/pages/game-page/components/quiz-mode/quiz-mode.component.scss
+++ b/fiszki-client/src/app/pages/user/pages/learning-page/pages/game-page/components/quiz-mode/quiz-mode.component.scss
@@ -72,7 +72,7 @@
 
 .timer
 {
-    width: 300px;
+    width: 400px;
     height: 20px;
     border: 2px solid base.$secondary-color;
     border-radius: 100px;
@@ -86,5 +86,6 @@
         height: 100%;
         background-color: base.$primary-color;
         border-radius: 100px;
+        transition: background-color ease-in-out 0.1s;
     }
 }
