--- a/fiszki-client/src/app/pages/user/pages/learning-page/pages/game-page/components/quiz-mode/quiz-mode.component.scss
+++ b/fiszki-client/src/app/pages/user/pages/learning-page/pages/game-page/components/quiz-mode/quiz-mode.component.scss
@@ -62,6 +62,8 @@
         cursor: pointer;
         background: #00a6fb;
         background: linear-gradient(0deg, #0066a1 0%, #00a6fb 70%);
+        background: linear-gradient(0deg, #00a115 0%, #00ff37 70%);
+        background: linear-gradient(0deg, #a10000 0%, #ff0000 70%);
     }
 
     div:hover
