kolorowanie blednych i poprawnych odpowiedzi

--- a/fiszki-client/src/app/pages/user/pages/learning-page/pages/game-page/components/quiz-mode/quiz-mode.component.html
+++ b/fiszki-client/src/app/pages/user/pages/learning-page/pages/game-page/components/quiz-mode/quiz-mode.component.html
@@ -1,14 +1,13 @@
 <div class="wrapper">
     <div class="box">
-        <h3>Pozostałe Fiszki</h3>
-        <h3>{{this.quiz.length - round - 1}}</h3>
+        <h3>Pozostałe Fiszki : {{this.quiz.length - round - 1}}</h3>
         <div class="timer">
             <div [ngStyle]="{'width.px' : timerWidth, 'background-color': timerWidth >= 300 ? 'red' : '#00a6fb'}"></div>
         </div>
         <div class="game-board">
             <h3>{{quiz[round].question}}</h3>
-            <div class="wariants">
-                <div *ngFor="let wariant of quiz[round].wariants" (click)="ChooseWariant(wariant)" #wariant>
+            <div class="wariants" #wariantRef >
+                <div *ngFor="let wariant of quiz[round].wariants" (click)="ChooseWariant(wariant)">
                     {{wariant}}
                 </div>
             </div>
