dodanie podsumowania quizu

--- a/fiszki-client/src/app/pages/user/pages/learning-page/pages/game-page/components/quiz-mode/quiz-mode.component.html
+++ b/fiszki-client/src/app/pages/user/pages/learning-page/pages/game-page/components/quiz-mode/quiz-mode.component.html
@@ -15,3 +15,6 @@
         <h3 class="points">Punkty : {{points}}</h3>
     </div>
 </div>
+<app-quiz-summary *ngIf="round === quiz.length - 1 && isClicked"
+    [scoredPoints]="points"
+/>
