--- a/fiszki-client/src/app/pages/user/pages/user-profile-router/pages/user-change-password/user-change-password.component.html
+++ b/fiszki-client/src/app/pages/user/pages/user-profile-router/pages/user-change-password/user-change-password.component.html
@@ -1,1 +1,45 @@
-<p>user-change-password works!</p>
+<div class="wrapper">
+    <h3>Zmień hasło</h3>
+    <div class="box">
+        <form #form="ngForm" (ngSubmit)="Submit()">
+            <div>
+                <label>Email</label>
+                <input 
+                name="email"
+                type="email"
+                [(ngModel)]="userData.email"
+                required
+                email
+                >
+            </div>
+            <div>
+                <label>Obecne hasło</label>
+                <input 
+                name="password"
+                type="password"
+                minlength="5"
+                [(ngModel)]="userData.password"
+                required>
+            </div>
+            <div>
+                <label>Nowe hasło</label>
+                <input 
+                name="newPassword"
+                type="password"
+                minlength="5"
+                [(ngModel)]="userData.newPassword"
+                required>
+            </div>
+            <div>
+                <label>Powtórz hasło</label>
+                <input 
+                name="rePassword"
+                type="password"
+                minlength="5"
+                [(ngModel)]="userData.reNewPassword"
+                required>
+            </div>
+            <button [ngClass]="form.valid === true ? 'active' : null" type="submit">Zatwierdź</button>
+        </form>
+    </div>
+</div>
