--- a/fiszki-client/src/app/pages/user/pages/user-profile-router/pages/user-collection-edit/user-collection-edit.component.scss
+++ b/fiszki-client/src/app/pages/user/pages/user-profile-router/pages/user-collection-edit/user-collection-edit.component.scss
@@ -49,6 +49,7 @@
         display: flex;
         flex-direction: center;
         align-items: center;
+        justify-content: center;
         flex-wrap: wrap;
     }
 }
