--- a/fiszki-client/src/app/pages/user/pages/user-profile-router/pages/user-change-password/user-change-password.component.html
+++ b/fiszki-client/src/app/pages/user/pages/user-profile-router/pages/user-change-password/user-change-password.component.html
@@ -1,3 +1,5 @@
+<ng-template appPlaceholder></ng-template>
+<app-loader *ngIf="isLoading"></app-loader>
 <div class="wrapper">
     <h3>Zmień hasło</h3>
     <div class="box">
@@ -27,7 +29,7 @@
                 name="newPassword"
                 type="password"
                 minlength="5"
-                [(ngModel)]="userData.newPassword"
+                [(ngModel)]="userData.new_password"
                 required>
             </div>
             <div>
@@ -36,7 +38,7 @@
                 name="rePassword"
                 type="password"
                 minlength="5"
-                [(ngModel)]="userData.reNewPassword"
+                [(ngModel)]="userData.re_new_password"
                 required>
             </div>
             <button [ngClass]="form.valid === true ? 'active' : null" type="submit">Zatwierdź</button>
