dodanie formularza do resetowania hasla

--- a/fiszki-client/src/app/pages/password-reset/password-reset.component.html
+++ b/fiszki-client/src/app/pages/password-reset/password-reset.component.html
@@ -17,20 +17,29 @@
                     >
                 </div>
                 <div>
-                    <label>Hasło</label>
+                    <label>Nowe hasło</label>
                     <input
                         type="password"
                         placeholder="hasło"
                         name="password"
                         required
-                        [(ngModel)]="userData.password"
+                        minlength="5"
+                        [(ngModel)]="userData.new_password"
                     >
                 </div>
-                <button [ngClass]="form.valid === true ? null : 'unactive'" type="submit">Zaloguj się</button>
+                <div>
+                    <label>Powtórz hasło</label>
+                    <input
+                        type="password"
+                        placeholder="powtórz hasło"
+                        name="re_password"
+                        required
+                        minlength="5"
+                        [(ngModel)]="userData.re_new_password"
+                    >
+                </div>
+                <button [ngClass]="form.valid === true ? null : 'unactive'" type="submit">Zmień hasło</button>
             </form>
         </div>
-        <a [routerLink]="['register']">Załóż konto</a>
-        <a [routerLink]="['password-reset']">Resetowanie hasła</a>
-        <p class="error" *ngIf="error">{{this.error}}</p>
     </div>
 </div>
