--- a/fiszki-client/src/app/pages/user/pages/learning-page/pages/game-page/components/learning-mode/learning-mode.component.scss
+++ b/fiszki-client/src/app/pages/user/pages/learning-page/pages/game-page/components/learning-mode/learning-mode.component.scss
@@ -9,12 +9,12 @@
     font-family: base.$main-font;
     letter-spacing: 2px;
     color: base.$secondary-color;
+    padding: 100px 0px;
 }
 
 .box
 {
     width: 90%;
-    margin-top: 50px;
     display: flex;
     flex-direction: column;
     justify-content: center;
