--- a/fiszki-client/src/app/pages/user/pages/user-profile-router/pages/user-collections/user-collections.component.scss
+++ b/fiszki-client/src/app/pages/user/pages/user-profile-router/pages/user-collections/user-collections.component.scss
@@ -11,10 +11,11 @@
     text-transform: uppercase;
     letter-spacing: 2px;
     color: base.$secondary-color;
+    padding: 100px 0px;
 
     h3
     {
-        padding: 40px;
+       margin-bottom: 20px;
     }
 }
 
