--- a/fiszki-client/src/app/pages/user/pages/learning-page/pages/categories-page/categories-page.component.scss
+++ b/fiszki-client/src/app/pages/user/pages/learning-page/pages/categories-page/categories-page.component.scss
@@ -3,7 +3,6 @@
 .wrapper
 {
     width: 100%;
-    margin-top: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -12,6 +11,7 @@
     letter-spacing: 2px;
     text-transform: uppercase;
     color: #00446b;
+    padding: 100px 0px;
 }
 
 .box
