--- a/fiszki-client/src/app/pages/user/pages/learning-page/pages/game-page/components/quiz-mode/quiz-mode.component.scss
+++ b/fiszki-client/src/app/pages/user/pages/learning-page/pages/game-page/components/quiz-mode/quiz-mode.component.scss
@@ -10,11 +10,11 @@
     letter-spacing: 2px;
     font-family: base.$main-font;
     color: base.$secondary-color;
+    padding: 100px 0px;
 }
 
 .box
 {
-    margin-top: 50px;
     width: 100%;
     display: flex;
     flex-direction: column;
