--- a/fiszki-client/src/app/pages/user/pages/learning-page/pages/game-page/components/summary-box/summary-box.component.scss
+++ b/fiszki-client/src/app/pages/user/pages/learning-page/pages/game-page/components/summary-box/summary-box.component.scss
@@ -6,7 +6,7 @@
     width: 100%;
     height: 100%;
     top: 0;
-    position: absolute;
+    position: fixed;
     background-color: rgba(0, 0, 0, 0.637);
     display: flex;
     justify-content: center;
