--- a/fiszki-client/src/app/pages/user/pages/user-profile-router/pages/user-change-password/user-change-password.component.scss
+++ b/fiszki-client/src/app/pages/user/pages/user-profile-router/pages/user-change-password/user-change-password.component.scss
@@ -8,10 +8,10 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    padding: 100px;
     
     h3
     {
-        margin-top: 50px;
         text-transform: uppercase;
         letter-spacing: 2px;
         font-family: base.$main-font;
