--- a/fiszki-client/src/app/pages/user/pages/learning-page/pages/game-page/components/quiz-mode/quiz-mode.component.scss
+++ b/fiszki-client/src/app/pages/user/pages/learning-page/pages/game-page/components/quiz-mode/quiz-mode.component.scss
@@ -45,9 +45,11 @@
 .wariants
 {
     width: 100%;
-    display: flex;
+    display: grid;
+    grid-template-columns: 200px;
+    grid-template-rows: repeat(4, 200px);
+    gap: 10px;
     justify-content: center;
-    align-items: center;
     margin-top: 20px;
 
     div
@@ -62,8 +64,6 @@
         cursor: pointer;
         background: #00a6fb;
         background: linear-gradient(0deg, #0066a1 0%, #00a6fb 70%);
-        // background: linear-gradient(0deg, #20a100 0%, #2afb00 70%);
-        // background: linear-gradient(0deg, #a10000 0%, #fb0000 70%);
     }
 
     div:hover
@@ -89,5 +89,25 @@
         background-color: base.$primary-color;
         border-radius: 100px;
         transition: background-color ease-in-out 0.1s;
+    }
+}
+
+@media(min-width : 576px)
+{
+    .wariants
+    {
+        grid-template-columns: repeat(2, 200px);
+        grid-template-rows: repeat(2, 200px);
+        gap: 10px;
+    }
+}
+
+@media(min-width : 992px)
+{
+    .wariants
+    {
+        grid-template-columns: repeat(4, 200px);
+        grid-template-rows: 200px;
+        gap: 15px;
     }
 }
